Crash after removing lamp, linked to "Lamp Data" shader node in Material Mode. #42525

Closed
opened 2014-11-06 16:02:31 +01:00 by Alexander Romanov · 10 comments

Exact steps for others to reproduce the error

  1. Create Lamp Data Node for any node material
  2. Select any scene lamp in Lamp Data Node
  3. Switch to Material mode
  4. Remove that lamp from the scene

After research I found that it happens because field "users" of linked lamp not incremented when lamp is being selected in Lamp Node.
Nevertheless after opening saved file "users" restores correct number of links and lamp origin becomes blue. IMO increasing and decreasing of "us" field should be in combobox event handler of "Lamp Data" shader node,
but I've not found any good infrastacture for this yet.

**Exact steps for others to reproduce the error** 1) Create Lamp Data Node for any node material 2) Select any scene lamp in Lamp Data Node 3) Switch to Material mode 4) Remove that lamp from the scene After research I found that it happens because field "users" of linked lamp not incremented when lamp is being selected in Lamp Node. Nevertheless after opening saved file "users" restores correct number of links and lamp origin becomes blue. IMO increasing and decreasing of "us" field should be in combobox event handler of "Lamp Data" shader node, but I've not found any good infrastacture for this yet.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov

This issue was referenced by 0c28aaae7e

This issue was referenced by 0c28aaae7e65538f8e6c30a35861dc6c49a84637

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0c28aaae7e.

Closed by commit 0c28aaae7e.

This issue was referenced by 4542504162

This issue was referenced by 4542504162a2962188e708e8b7dab609bddc0865
Author
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Author
Member

After this fix the bug has gone, but there is one more problem left.

  1. While adding or deleting lamp in Lamp Data node the number of its users does not change. Thus it will disappear from datablocks after deleting.
  2. If we press Ctl+Z or save and reopen file the number of users becomes correct. And it will stay in datablocks after deleting.
After this fix the bug has gone, but there is one more problem left. 1) While adding or deleting lamp in Lamp Data node the number of its users does not change. Thus it will disappear from datablocks after deleting. 2) If we press Ctl+Z or save and reopen file the number of users becomes correct. And it will stay in datablocks after deleting.

This is known and a separate issue check #42523

Looks like it was done on purpose to avoid a crash on exit but we might want to check that one again.

This is known and a separate issue check #42523 Looks like it was done on purpose to avoid a crash on exit but we might want to check that one again.
Author
Member

Tag for searching purposes: Blend4Web

Tag for searching purposes: Blend4Web
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42525
No description provided.