Fix T42525 crash when deleting lamp attached to Lamp Data material node in material shading mode.